--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,7 @@
-# Welcome to Jekyll!
-#
 # This config file is meant for settings that affect your whole blog, values
 # which you are expected to set up once and rarely edit after that. If you find
 # yourself editing this file very often, consider using Jekyll's data files
 # feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
@@ -21,6 +16,10 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username:  peasantqueen, kgdant, ahummons, kgalba
+collections:
+  designs:
+    output: true
+    permalink: /designs/:title/
 
 # Build settings
 
