--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title: Dominican University 3D Printing Lab
 email: mediacenter@dom.edu
 description: >- # this means to ignore newlines until "baseurl:"
   This is a group project for LIS786 creating a microsite for a 3D printing lab at Dominican University
-baseurl: "/groupb-wk14" # the subpath of your site, e.g. /blog
+baseurl: '<</groupb-wk14' # the subpath of your site, e.g. /blog
 url: "https://" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username:  peasantqueen, kgdant, ahummons, kgalba
@@ -20,6 +20,7 @@ collections:
   designs:
     output: true
     permalink: /designs/:title/
+
 
 # Build settings
 
